modified theme `Academic` version 1.7

--- a/wp-content/themes/academic/style.css
+++ b/wp-content/themes/academic/style.css
@@ -612,7 +612,7 @@ body.search .page-content form button[type="submit"] {
 }
 #colophon {
     text-align: left;
-    background-color: #353535;
+    background-color: #0054a6;
 }
 .site-footer form {
     position: relative;
