--- a/wp-content/themes/academic/style.css
+++ b/wp-content/themes/academic/style.css
@@ -3670,7 +3670,7 @@ ul.trail-items li:last-child:after {
     color: #347FE1;
 }
 .site-info {
-    background-color: #303030;
+    background-color: #0054a6;
     color: #fff;
     padding: 25px 0;
 }
